--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,42 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "MyLearning",  
+  "short_name": "My Learning",
+  "theme_color": "#1A202C",
+  "background_color": "#1A202C",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "./Images/Icon512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
+      "src": "./Images/Icon192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "./Images/Icon76.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "76x76"
+    },
+    {
+      "src": "./Images/Icon167.png",
+      "type": "image/png",
+      "sizes": "167x167"
+    },
+    {
+      "src": "./Images/Icon128.png",
+      "type": "image/png",
+      "sizes": "128x128"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+    
+  ]
 }
